# RYKNSH-records

./: .env.local  NEXT_SESSION.md  README.md
Ada/: .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  WHITEPAPER.md  main.py  pyproject.toml
Ada/agent/: billing.py  catalog.py  checkpointer.py  graph.py  observability.py  providers.py  tenant.py
Ada/migrations/: 001_production_tables.sql
Ada/server/: api_keys.py  app.py  config.py  dashboard.py  feedback.py  onboarding.py  queue.py  rate_limit.py  stripe_billing.py
Ada/static/: dashboard.html  index.html
Ada/tests/: conftest.py  test_adversarial.py  test_api.py  test_blueprint.py  test_evolution.py  test_evolution_adversarial.py  test_graph.py  test_integration.py  test_lifecycle.py  test_lifecycle_adversarial.py  test_m4.py  test_m4_adversarial.py  test_observability.py  test_parallel.py  test_performance.py  test_platform.py  test_providers.py  test_rag.py  test_rate_limit.py  test_sentinel.py  test_strategist.py  test_streaming.py  test_tenant.py  test_tools.py  test_validator.py
Ada/worker/: consumer.py
Cyrus/: .env.example  ROADMAP.md  WHITEPAPER.md  main.py  pyproject.toml
Cyrus/engine/: __init__.py  base.py  graph.py  state.py
Cyrus/migrations/: 001_initial.sql  002_trust_engine.sql  003_plg_launch.sql
Cyrus/models/: __init__.py  blueprint.py  config.py  entity.py
Cyrus/nodes/: __init__.py
Cyrus/server/: __init__.py  app.py  tenant.py
Cyrus/static/: app.js  dashboard.html  index.html  style.css
Cyrus/tests/: __init__.py  conftest.py  test_api.py  test_blueprint.py  test_entity_model.py  test_graph.py  test_intelligence.py  test_sprint2.py  test_sprint3.py  test_sprint4.py  test_sprint5.py
Lumina/: .dockerignore  Dockerfile  MILESTONE.md  ROADMAP.md  pyproject.toml  requirements.txt
Lumina/docs/: debate_quality_b2b_b2c_c2c.md  lumina_quality_debate.md  whitepaper.md
Lumina/migrations/: 001_model_registry_and_reference_set.sql
Lumina/src/: config.py
Lumina/static/: app.js  index.html  style.css
Lumina/tests/: test_l0_assertion_boost.py  test_l1_adversarial.py  test_l2_integration.py  test_l3_performance.py  test_l4_lifecycle_e2e.py  test_l5_evolution.py  test_l6_security_gate.py
Velie/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
Velie/agent/: autofix.py  checkpointer.py  ci_monitor.py  db.py  feedback.py  github_app.py  graph.py  health.py  prompts.py  reactions.py  repo_learner.py  resilient.py  sanitizer.py  self_improve.py  shadow_review.py  suggestions.py  tenant.py  trust.py  usage.py
Velie/dashboard/: package-lock.json  package.json
Velie/docs/: ROADMAP.md  WHITEPAPER.md
Velie/scripts/: test_webhook.sh
Velie/server/: app.py  config.py  queue.py
Velie/tests/: conftest.py  e2e_dummy_code.py  e2e_real_test.py  test_autofix.py  test_checkpointer.py  test_ci_feedback.py  test_graph.py  test_production.py  test_reactions.py  test_sanitizer.py  test_self_improve.py  test_shadow.py  test_suggestions.py  test_tenant.py  test_usage.py  test_webhook.py  test_world_features.py
(+150 files in other folders)
