[project]
name = "velie"
version = "0.1.0"
description = "AI-powered code review agent for RYKNSH records — LangGraph + FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.3.3",
    "langgraph>=1.0.9",
    "pydantic-settings>=2.13.1",
    "pygithub>=2.8.1",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
