[project]
name = "velie"
version = "0.1.0"
description = "AI-powered code review agent for RYKNSH records — LangGraph + FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.5",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.3.3",
    "langgraph>=1.0.9",
    "langgraph-checkpoint-postgres>=3.0.4",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pygithub>=2.8.1",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "redis>=7.2.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
